--- a/Position Headers/Style.css
+++ b/Position Headers/Style.css
@@ -1018,8 +1018,8 @@ a.pos-hdr-btn:hover {
 }
 
 a.pos-hdr-btn-success:hover {
-    background: #194E77;
-    border: 2px solid #194E77;
+    background: #2E638B;
+    border: 2px solid #2E638B;
 }
 
 .pos-hdr-btn-back {
@@ -1029,8 +1029,8 @@ a.pos-hdr-btn-success:hover {
 }
 
 a.pos-hdr-btn-back:hover {
-    background: #496B89;
-    border: 2px solid #496B89;
+    background: #6D88A0;
+    border: 2px solid #6D88A0;
 }
 
 
