--- a/sc stp page style1.css
+++ b/sc stp page style1.css
@@ -259,6 +259,10 @@
     background-image: url(http://www.supercamp.com/wp-content/uploads/2016/12/KatieCardFlip1.jpg);
 }
 
+.ch-img-6 {
+    background-image: url(http://www.supercamp.com/wp-content/uploads/2017/01/CustomerServiceCardFlip.jpg);
+}
+
 .ch-info h3 {
     color: #fff;
     text-transform: uppercase;
