--- a/freehtml5.co-website template/css/cards.css
+++ b/freehtml5.co-website template/css/cards.css
@@ -25,6 +25,18 @@ html.mobile-menu-expanded {
   overflow: hidden;
 }
 
+.half-inner::before {
+  position: absolute;
+    top: -20px;
+    right: -20px;
+    width: 80%;
+    height: 540px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    content: '';
+    z-index: -1;
+    background: #fff;
+}
+
 body {
   font-family: "Open Sans", Arial, sans-serif;
   font-size: 16px;
