--- a/Job Descriptions/Style.css
+++ b/Job Descriptions/Style.css
@@ -1,3 +1,9 @@
+@media screen and (max-width:768px) {
+    .photo-col {
+        display: none;
+    }
+}
+
 p.description {
     margin-bottom: 30px !important;
     margin: 0 0 10px;
