--- a/Job Descriptions/Style.css
+++ b/Job Descriptions/Style.css
@@ -1,3 +1,76 @@
+@media screen and (max-width: 576px) {
+    .comparison-title {
+        font-size: 1.75em !important;
+    }
+}
+
+.comparison-title {
+  padding-top: 0em;
+  display: block;
+  font-size: 2.25em;
+  line-height: 20px;
+  font-family: "Open Sans", Arial, sans-serif;
+  color: #45769C;
+  margin-bottom: 30px;
+}
+.comparison-title > span {
+  font-size: 16px;
+  line-height: 16px;
+  font-family: "Open Sans", Arial, sans-serif;
+  font-weight: 400;
+  color: gray;
+}
+.comparison-item {
+  display: block;
+  color: #333333;
+  float: left;
+  width: 100%;
+  text-align: center;
+  background: #fff;
+  padding: 20px 0px 20px;
+  margin-bottom: 1.5em;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+}
+.comparison-item.comparison-feature {
+  border-top: 10px solid #45769C;
+  z-index: 9;
+}
+.comparison-item p:last-child {
+  margin-bottom: 0;
+}
+.comparison-item:hover, .comparison-item:focus, .comparison-item:active {
+  text-decoration: none;
+  outline: none;
+}
+.comparison-item .comparison-item-lead {
+  font-size: 12px;
+  font-family: "Montserrat", Arial, sans-serif;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  margin-bottom: 15px;
+}
+.comparison-item .comparison-item-text {
+  font-size: 16px;
+  color: #a6a6a6;
+}
+.comparison-item:hover, .comparison-item.active {
+  -webkit-box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.15);
+  -ms-box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.15);
+}
+@media screen and (max-width: 768px) {
+  .comparison-item:hover, .comparison-item.active {
+    margin-top: 0px;
+  }
+}
+
 section {
     padding: 100px 0;
 }
@@ -24,16 +97,16 @@ p.description {
     letter-spacing: normal;
 }
 
+h2.description-title {
+    font-weight: bold;
+}
+
 h3.description-title {
     margin-top: 0px;
     margin-bottom: 10px !important;
 }
 
-/*
-///////////////////////////////////////////////////
-1.0 BASE
-///////////////////////////////////////////////////
-*/
+/*Box behind photo
 .half-inner::before {
   position: absolute;
     top: -20px;
@@ -45,7 +118,7 @@ h3.description-title {
     z-index: -1;
     background: #fff;
 }
-
+*/
 .pos-hdr-btn {
     margin-right: 4px;
     margin-bottom: 4px;
@@ -75,6 +148,7 @@ h3.description-title {
 
 a.pos-hdr-btn:hover {
     color: #fff;
+    text-decoration: none;
 }
 
 .pos-hdr-btn-success {
