--- a/Job Descriptions/Style.css
+++ b/Job Descriptions/Style.css
@@ -52,6 +52,16 @@ a.pos-hdr-btn-back:hover {
     border: 2px solid #6D88A0;
 }
 
+.position-title {
+    text-transform: none;
+    font-size:4em;
+    font-weight:700;
+    margin:0 0 30px 0;
+    padding:0;
+    color: #262626;
+    line-height: 1.1;"
+}
+
 @media (max-width:768px) {
     .pos-hdr {
         text-align: center;
@@ -66,8 +76,8 @@ a.pos-hdr-btn-back:hover {
 }
 
 @media (max-width: 576px) {
-    .font-weight-normal {
-        font-size: 3em !important;
+    .position-title {
+        font-size: 3em;
     }
 }
 
