--- a/Job Descriptions/Style.css
+++ b/Job Descriptions/Style.css
@@ -1,3 +1,7 @@
+.background-white {
+    background:#fff;
+}
+
 /*//// Header ////*/
 .pos-hdr-btn {
     margin-right: 4px;
@@ -59,7 +63,13 @@ a.pos-hdr-btn-back:hover {
     margin:0 0 30px 0;
     padding:0;
     color: #262626;
-    line-height: 1.1;"
+    line-height: 1.1;
+}
+
+.position-subtitle {
+    margin-bottom: 30px;
+    color: #898989;
+    font-size: 1.3em;
 }
 
 @media (max-width:768px) {
@@ -209,54 +219,3 @@ h3.description-title {
     padding-left: 2em;
     text-indent: -2em;
 }
-
-/*Box behind photo
-.half-inner::before {
-  position: absolute;
-    top: -20px;
-    right: -20px;
-    width: 80%;
-    height: 540px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    content: '';
-    z-index: -1;
-    background: #fff;
-}
-*/
-
-
-
-/*Nice looking text link
-.hdr-or {
-    padding-left: 10px;
-    padding-right: 10px;
-    color: #b3b3b3;
-    display: -moz-inline-stack;
-    display: inline-block;
-    zoom: 1;
-    font-weight: bold;
-}
-
-.pos-hdr-lnk-success {
-    color: #45769C;
-    font-weight: bold;
-}
-
-a.pos-hdr-lnk-success {
-    color: #45769C;
-}
-
-a .hdr-icon-right {
-    top: 2px;
-    position: relative;
-    display: -moz-inline-stack;
-    display: inline-block;
-    zoom: 1;
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    -ms-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-    font-size: 1.1em;
-}
-*/
